# resources

./: README.md
advanced-JS-labs/: README.md  package-lock.json  package.json  vitest.config.js
agents-concepts-labs/: .env.example  .gitignore  README.md  conftest.py  pyproject.toml
agents-concepts-labs/exercises/01-state-graph/: README.md  graph.py  test_01_state_graph.py
agents-concepts-labs/exercises/02-reducers/: README.md  graph.py  test_02_reducers.py
agents-concepts-labs/exercises/03-conditional-routing/: README.md  graph.py  test_03_conditional_routing.py
agents-concepts-labs/exercises/04-llm-node/: README.md  graph.py  test_04_llm_node.py
agents-concepts-labs/exercises/05-tool-calling/: README.md  graph.py  test_05_tool_calling.py
agents-concepts-labs/exercises/06-prebuilt-agent/: README.md  graph.py  test_06_prebuilt_agent.py
agents-concepts-labs/exercises/07-memory/: README.md  graph.py  test_07_memory.py
agents-concepts-labs/exercises/08-human-in-the-loop/: README.md  graph.py  test_08_human_in_the_loop.py
agents-concepts-labs/exercises/09-streaming/: README.md  graph.py  test_09_streaming.py
agents-concepts-labs/exercises/10-parallel-fanout/: README.md  graph.py  test_10_parallel_fanout.py
agents-concepts-labs/labgraph/: __init__.py  config.py  fake.py  pretty.py  todo.py  tools.py
go-advanced-concurrency-labs/: README.md  go.mod
go-lab/: .gitignore  README.md  go.mod
kafka-labs/: .gitignore  Makefile  README.md  go.mod  go.sum
react-labs/: README.md  index.html  package-lock.json  package.json  vitest.config.js  (+1 more)
(+196 files in other folders)
